--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Add to Trello",
     "description": "Add cards to your Trello boards from your browser",
     "version": "1.0.0",
-    "browser_action": {
+    "action": {
       "default_popup": "popup.html",
       "default_title": "Add Cards to Trello"
     },
@@ -17,6 +17,9 @@
       "https://api.trello.com/"
     ],
     "web_accessible_resources": [
-      "settings.html"
+      {
+        "resources": ["settings.html"],
+        "matches": ["<all_urls>"]
+      }
     ]
 }
