Update manifest.json for version and permissions

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 3,
   "name": "Add to Trello",
-  "version": "1.2",
-  "description": "Chrome extension to make it easier to add cards to Trello from your browser",
+  "version": "2.0.0",
+  "description": "Quickly add cards to Trello from any webpage.",
   "permissions": [
     "storage",
     "activeTab",
-    "contextMenus",
-    "scripting"
+    "scripting",
+    "contextMenus"
   ],
   "host_permissions": [
     "https://trello.com/*",
@@ -19,22 +19,33 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
-    }
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    },
+    "default_title": "Add to Trello"
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "options_page": "options.html",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "css": ["content.css"]
+      "js": ["contentScript.js"]
     }
   ],
-  "icons": {
-    "16": "images/icon16.png",
-    "48": "images/icon48.png",
-    "128": "images/icon128.png"
-  }
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "*.html",
+        "*.js",
+        "*.css",
+        "icons/*"
+      ],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
